# pebble

./: Cargo.toml  README.md  README_Advanced_Analyzer.md  TABLE_MAPPING_GUIDE.md  advanced_dataset_analyzer.py  analysis_config.py  business_intelligence_reporter.py  create_sample_db.py  data_explorer.py  data_profiler.py  data_quality_assessor.py  dataset_relationship_detector.py  dataset_relationship_report.txt  example_usage.py  fix_unicode.py  histogram_analysis.py  histogram_permutations.py  orders.csv  sample_data.csv  sample_data.db  sample_time_data.csv  test_customers.csv  test_products.csv
explorer_outputs/: data_exploration_report.txt
histogram_outputs/: insights_20250729_120632.json
profiler_outputs/: data_profile_report.html  data_profile_report.txt
quality_outputs/: quality_assessment_report.txt
scripts/: advanced_histogram_analysis.py  advanced_histogram_explorer.py  bokeh_interactive_plots.py  business_intelligence_reporter.py  check_db.py  comprehensive_histogram.py  create_sqlite_db.py  data_explorer.py  data_profiler.py  data_quality_assessor.py  example_advanced_usage.py  fix_explorer_unicode.py  histogram_permutations.py  interactive_plots.py  plot_advanced_histogram.py  plot_advanced_polar.py  plot_bar.py  plot_distributions.py  plot_heatmap.py  plot_histogram.py  plot_permutation_builder.py  plot_polar.py  plot_scatter.py  plot_timeseries.py  seaborn_advanced_histograms.py  table_relationship_analyzer.py  test_dataset_analyzer.py
src/: main.rs
standalone_plots/: .gitignore  ADVANCED_PLOT_SUMMARY.md  COMPREHENSIVE_HISTOGRAM_README.md  (+22 more)
(+35 files in other folders)
