[package]
name = "pebble"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
image = { version = "0.25", features = ["png"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rfd = "0.15"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
anyhow = "1.0"
dirs = "5.0"

[profile.release]
opt-level = 3
lto = true
